# note-app

./: CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Note.h  NoteApp.cpp  NoteApp.h  Observer.h  Subject.h
include/: Collection.h  Note.h  NoteApp.h  Observer.h
src/: Collection.cpp  Note.cpp  NoteApp.cpp
test/: CMakeLists.txt  testCollection.cpp  testNote.cpp  testNoteApp.cpp
